--- a/index.org
+++ b/index.org
@@ -7,6 +7,8 @@
 #+options: ^:nil
 #+LATEX: Literal LaTeX code for export
 
+* Requirements
+  [[file:./intro.html][Requirements]]
 * Data Model
   [[file:src/datamodel/index.html][Data Model Documentation
 ]]
