--- a/intro.org
+++ b/intro.org
@@ -1,105 +1,56 @@
-#+TITLE: Building a web application
-#+AUTHOR: Ian Galvin Fernandes
-#+DATE: [2016-05-17 Tue]
-
-
+#+TITLE:Building a Web Application: Ground up to the cloud
+#+Author:Namratha Deepthi
+#+Date:[2016-05-17 Wed]
 * Introduction
+** What is a Web Application?
+A web application runs continously on a web server and allows clients
+to interact from their browser on the client side.The web app
+interacts with a database.
+- [[./web-app-development.jpg][image]]
+The various phases in developing a web application are listed below.
+
+
+* Requirements Gathering
+  This is the first and important phase of the software development
+  life cycle. The requirements are identified by listening to the
+  client and further questions can be raised to clarify the
+  requirements.
+  Example: The requirements for a email-directory:
+           The roles are identified as admin and a user.
+           Each user has an email.
+           No two users share the same email.
+           Admin can create or delete users other than himself.
+           Usr can view and update his details.           
+           Futher requirements can be clarified -- eg: There can be
+           more than one admin. A user can log using more than one session.
+* Design of data model
+  Data model is an abstract model, a collection of sets and relations of data that is
+  formulated according to the requirements.A set is a collection of
+  things and a relation is a mapping from one set to another.A
+  relation from set A to B can be represented as r: A > B and its
+  inverse: B>A  { (b,a) | bEB, aEA AND r(a,b) }
+  ( A system consists of states and evolves over time)A system can be
+  modelled as entities and relationships.Every relation can
+  be represented as a table.For eg for the email-directory web app
+  mentioned above:
+     email:      User > Email! (Every user has exactly one email)
+     name:       User > Name!  (Each user has exactly one name)
+     role:       User > Role!  (Each user has exactly one role)
+     user:       Session > User!(Each session belongs to one user)
+  A data model consists of type-structure(entities and relationships)
+  and state structure.
   
-  Through the course of this project, we need to build a web
-  application, ground up to the cloud.  We need to go through an
-  end-to-end requirements.
-
-  [[./x.jpg]]
-
-* Goal
+* Coding
+  The actual implementation is done here using a programming language.
+* Deployment
+  -
+* Testing
+  Unit test cases are developed and the application is tested to
+  ensure that it is free of bugs.
+* Integration
+* List of Technologies
+  - [[https://www.python.org][Python]] :: Python will be the main language of implementation in this project.  The version needed is 2.7 (not 3.x).
+  - [[https://github.com][git]]    :: Distributed version control system.
+  - [[http://flask.pocoo.org/][Flask]] :: Flask is a framework for web development.  You will need to use version 0.10.1.
+  - [[https://www.javascript.com/][javascript]]
   
-  Gathering the requirements
-
-** Requirements gathering
-   We need to document the requirements of the user/customer. These
-   need to be established as early as possible, so as to ensure that
-   the end application is what the customer wants.
-   
-* Components of a web application
-
-** Front-end component
-   We need to build the front-end of the application, which will be
-   the interface for the user to interact with the application. The
-   front-end is essentially the interface between the user and the
-   server.
-   
-** Server-side component
-   The server-side component will service the requests from the
-   front-end user component. This component ensures that whatever
-   data the front-end component requests will be serviced accurately
-   and as soon as possible, from the database.
-
-* Relational data model
-
-** What we've learnt so far
-   So far, we've learnt to model the entities in a system into
-   relations, so that we can manipulate data in the system.
-
-   We've learnt about isolating entities of a system, in order to
-   depict the states of the system.
-
-   We've learnt about representing functions in terms of the
-   cardinalities.
-
-   We've learnt about cardinalities of entities, and how to use these
-   cardinalities in order to model relations.
-
-   Cardinalities:
-
-   #+BEGIN_EXAMPLE
-   
-   
-   B*-----> 0 or more
-
-   B+-----> atleast 1
-
-   B!-----> exactly 1
-
-   B?-----> at most 1
-
-   #+END_EXAMPLE
-
-   We've also learnt about system states, and how to use cardinalities
-   to model these system states in order to depict the complete
-   working state of a system.
-
-   Using cardinalities enables us to accurately depict the system
-   states, either relationally or graphically.
-   
-   We've also learnt about relational intergrity of the relations in
-   a system.
-
-
-
-** Operations
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| Operation                          | Credentials          | Referential Integrity | Effect and/OR outputs | Remarks              |
-| Signature                          |                      |                       |                       |                      |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| getRole(u:User, s:Session)         | s.user.role=admin OR | s:sessionSet          | admin/user            |                      |
-|                                    | s.user.role=user     | u:userSet             |                       |                      |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| changeRole(u:User)                 | s.user.role=admin    | u:userSet             | Success/Failure       |                      |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| removeAdmin(u:User)                | s.user.role=admin    | u:adminSet            | Success/Failure       |                      |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| listOnlineUsers(u:User, s:Session) | s.user.role=admin    | u:userSet             |                       |                      |
-|                                    |                      | s:sessionSet          |                       |                      |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-| getUserByEmail(e:Email, s:Session) |                      | s:sessionSet          | u:User                | Return user by email |
-|------------------------------------+----------------------+-----------------------+-----------------------+----------------------|
-|                                    |                      |                       |                       |                      |
-  
-
-* List of technologies
-  - [[https://www.python.org][Python]] :: Python will be the main language in the implementation
-              of this project.  We will be using version 2.7.  (Not
-              3.x).
-
-  - [[https://flask.pocoo.org/][Flask]] :: Flask is the framework for web development in Python.  
-             We will use version 0.10.1.
